2003-04-08  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/atom.cpp :
	* kb/atom.h :

	  - Constants are stored as strings now. this is for the sake of
	    simplicity of the api -- init() and get().

	* kb/kb.h :
	* kb/kb.cpp :
	* parser/parser.y :
        * kb/transtab.h :
	* kb/transtab.cpp :
	* kb/consttab.h :
	* kb/consttab.cpp :

	  - Cleanup.

	* kb/atom.h :
	* kb/atom.cpp :

	  - Cleanup to ensure reinitialised atoms will not leak memory.

2003-04-07  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/atom.cpp :
	* kb/atom.h :
	* kb/expression.cpp :
	* kb/expression.h :
	* kb/transtab.cpp :
	* kb/transtab.h :

	  - Added transformation rules in generate_nlp(). And thus, we now
	    begin the lengthy process of cleaning up.

	  - Added replace() functions to replace instances of variables with
	    identifiers.

	* kb/kb.cpp :

	  - Added constraints in generate_nlp().

	* kb/consttab.h :
	* kb/consttab.cpp :

	  - Added get() functions.

	* kb/kb.h :
	* kb/kb.cpp :

	  - Added initial state in generate_nlp().

2003-04-04  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.h :
	* kb/kb.cpp :

	  - decode_atom() is now used to generate atom list.

	  - Added decode_atom().

	  - Cleanup so some of the rules are generated mathematically.

	  - Added inertial and complementary rules.

	  - Added inheritance and transitivity rules.

	  - Now generate_nlp() generates a list of possible atoms.

	* kb/symab.h :
	* kb/symtab.cpp :

	  - Added yet another get() function to give an array of all
	    identifier matching the given type.

	* common/vlad.h :
	* common/list.cpp :

	  - Changed macro VLAD_ADT_MALLOC to include a size parameter.

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Replaced kb::eval() function with a generate_nlp() stub.

2003-04-03  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Added partial eval() function.

	* kb/Makefile.in :
	* kb/sequence.h :
	* kb/sequence.cpp :
